# Lenstool_GUI_AI

./: README.md  pyproject.toml
examples/: example.py
examples/.ipynb_checkpoints/: lenstool_gui-checkpoint.ipynb
src/lenstool_gui/: gui.py  lenstool_model.py
src/lenstool_gui/source_extraction/: match_cat.py  source_extract.py
src/lenstool_gui/source_extraction/SExtractor_config/from_DC/: DC.conf  rrg.param
src/lenstool_gui/source_extraction/SExtractor_config/from_pyRRG/: HFF_cold.param  HFF_hot.param  HFF_hot_bis.param
src/lenstool_gui/source_extraction/SExtractor_config/in_progress/: default.param
src/lenstool_gui/utils/utils_Lenstool/: file_makers.py  redshift_extractors.py
src/lenstool_gui/utils/utils_Qt/: utils_general.py
src/lenstool_gui/utils/utils_plots/: plot_utils_general.py
src/lenstool_gui_ai/: catalog.py  fits_image.py  gui.py  lenstool_model.py  main.py
src/lenstool_gui_ai/source_extraction/SExtractor_config/from_DC/: DC_SAVE.conf
src/lenstool_gui_ai/source_extraction/SExtractor_config/in_progress/: default_cold.sex  default_hot.sex
src/lenstool_gui_ai/source_extraction/pyextract/: image_config.py
src/lenstool_gui_ai/source_extraction/pysex/: pysex.py
src/lenstool_gui_ai/source_extraction/stilts/: stilts.sh
src/lenstool_gui_ai/utils/utils_Lenstool/: file_makers.py  operations.py  param_extractors.py
src/lenstool_gui_ai/utils/utils_Qt/: selectable_classes.py
src/lenstool_gui_ai/utils/utils_astro/: cat_manip.py  get_cosmology.py  utils_general.py
src/lenstool_gui_ai/utils/utils_general/: utils_general.py
src/lenstool_gui_ai/utils/utils_plots/: plot_utils_general.py  plot_utils_specific.py  plt_framework.py
tests/: test.py  test_pyqtgraph.py
