[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lenstool_gui"
version = "3.0.0"
authors = [
  { name="Tom Resseguier", email="tresseg1@jhu.edu" },
]
description = "A visual interface to explore astronomical images, catalogs, and lens models created using Lenstool."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tomresseguier/Lenstool_GUI_AI/"
"Bug Tracker" = "https://github.com/tomresseguier/Lenstool_GUI_AI/issues"


